--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "description": "",
   "dependencies": {
     "discord.js": "^14.16.3",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "mysql2": "^3.11.3"
   },
   "devDependencies": {
     "@types/node": "^22.7.4",
