--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.5",
-    "mysql2": "^3.11.3"
+    "mysql2": "^3.11.3",
+    "@ngrok/ngrok": "^1.4.1"
   },
   "devDependencies": {
     "@types/node": "^22.7.4",
