--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fakeprofile",
+  "name": "moonlight",
   "version": "1.0.0",
   "main": "dist/moonlight.js",
   "scripts": {
@@ -12,13 +12,18 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@ngrok/ngrok": "^1.4.1",
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.5",
+    "express": "^4.21.0",
     "mysql2": "^3.11.3",
-    "@ngrok/ngrok": "^1.4.1"
+    "ngrok": "latest"
   },
   "devDependencies": {
+    "@types/express": "^5.0.0",
     "@types/node": "^22.7.4",
-    "tsx": "^4.19.1"
+    "cross-env": "^7.0.3",
+    "tsx": "^4.19.1",
+    "typescript": "^5.6.2"
   }
 }
